Add database projects, and a create user endpoint

--- a/api/Api.SlowbackBgSession/Api.SlowbackBgSession.csproj
+++ b/api/Api.SlowbackBgSession/Api.SlowbackBgSession.csproj
@@ -13,9 +13,16 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Content Include="..\.dockerignore">
-        <Link>.dockerignore</Link>
-      </Content>
+        <Content Include="..\.dockerignore">
+            <Link>.dockerignore</Link>
+        </Content>
+        <Content Update="appsettings.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Database.Supabase\Database.Supabase.csproj"/>
     </ItemGroup>
 
 </Project>
