--- a/api/Database.Common/Database.Common.csproj
+++ b/api/Database.Common/Database.Common.csproj
@@ -11,4 +11,8 @@
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\Validator\Validator.csproj"/>
+    </ItemGroup>
+
 </Project>
