--- a/.github/workflows/build-docker-images.yml
+++ b/.github/workflows/build-docker-images.yml
@@ -15,9 +15,6 @@ jobs:
         name: Checkout
         uses: actions/checkout@v4
       -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
@@ -30,7 +27,7 @@ jobs:
         name: Build and push frontend
         uses: docker/build-push-action@v5
         with:
-          context: ./frontend
+          context: "{{defaultContext}}:frontend"
           file: ./docker/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/slowback-boardgame-session-tracker-frontend:latest
@@ -38,7 +35,7 @@ jobs:
         name: Build and push api
         uses: docker/build-push-action@v5
         with:
-          context: ./api
+          context: "{{defaultContext}}:api"
           file: ./API/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/slowback-boardgame-session-tracker-api:latest
