--- a/.github/workflows/build-docker-images.yml
+++ b/.github/workflows/build-docker-images.yml
@@ -5,37 +5,32 @@ on:
     branches:
       - 'main'
   workflow_dispatch:
-    
+
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v4
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push frontend
+      - name: Build and push frontend
         uses: docker/build-push-action@v5
         with:
           context: "{{defaultContext}}:frontend"
           file: ./docker/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/slowback-boardgame-session-tracker-frontend:latest
-      -
-        name: Build and push api
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/slowback-boardgame-session-tracker-frontend:${{ github.run_number }}
+      - name: Build and push api
         uses: docker/build-push-action@v5
         with:
           context: "{{defaultContext}}:api"
           file: ./API/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/slowback-boardgame-session-tracker-api:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/slowback-boardgame-session-tracker-api:${{ github.run_number }}
