Add basic MySql version of the IDataStorer where nothing is implemented yet, outside of the plumbing to access it

--- a/api/API/appsettings.json
+++ b/api/API/appsettings.json
@@ -12,5 +12,11 @@
   },
   "Jwt": {
     "Key": "CHICKEN_NUGGETS_ARE_REALLY_REALLY_REALLY_GREAT"
+  },
+  "Database": {
+    "ConnectionString": "Server=localhost;Database=boardGame;Uid=root;Pwd=password;"
+  },
+  "DataStorer": {
+    "Use": "EntityFramework"
   }
 }
