--- a/api/API/API.csproj
+++ b/api/API/API.csproj
@@ -22,6 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Database.MySql\Database.MySql.csproj"/>
         <ProjectReference Include="..\Database.Supabase\Database.Supabase.csproj"/>
     </ItemGroup>
 
