--- a/api/Database.MySql.Test/Database.MySql.Test.csproj
+++ b/api/Database.MySql.Test/Database.MySql.Test.csproj
@@ -10,7 +10,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.16"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.16"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.1"/>
         <PackageReference Include="NUnit" Version="3.13.3"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.4.2"/>
@@ -19,9 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\API\API.csproj"/>
         <ProjectReference Include="..\Database.MySql\Database.MySql.csproj"/>
-        <ProjectReference Include="..\Database.Supabase\Database.Supabase.csproj"/>
     </ItemGroup>
 
 </Project>
