Add initial migration + get migrations working with the EF parts of the project

--- a/api/API/appsettings.json
+++ b/api/API/appsettings.json
@@ -14,7 +14,7 @@
     "Key": "CHICKEN_NUGGETS_ARE_REALLY_REALLY_REALLY_GREAT"
   },
   "Database": {
-    "ConnectionString": "Server=localhost;Database=boardGame;Uid=root;Pwd=password;"
+    "ConnectionString": "Server=127.0.0.1;Database=boardGame;user=root;pwd=password"
   },
   "DataStorer": {
     "Use": "EntityFramework"
