--- a/api/API/docker-compose.yml
+++ b/api/API/docker-compose.yml
@@ -4,7 +4,9 @@
     command: --default-authentication-plugin=mysql_native_password
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: boardGame
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: password
     ports:
       - 3306:3306
