--- a/api/Database.MySql/Database.MySql.csproj
+++ b/api/Database.MySql/Database.MySql.csproj
@@ -8,6 +8,10 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.16"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.16">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.14"/>
     </ItemGroup>
 
