Switch the frontend project over to SSR mode.  The project has a lot of dynamic routes that make SSG less viable in a production environment where we will not know what IDs could exist

--- a/frontend/docker/Dockerfile
+++ b/frontend/docker/Dockerfile
@@ -11,6 +11,10 @@ ENTRYPOINT ["npm", "run", "test:ci"]
 FROM setup as builder
 RUN npm run build:ci
 
-FROM nginx:stable-alpine as final
-COPY --from=builder app/build usr/share/nginx/html
-EXPOSE 80
+FROM node:18-alpine as final
+COPY --from=builder app/build build/
+COPY --from=builder app/node_modules node_modules/
+COPY package.json .
+ENV NODE_ENV=production
+EXPOSE 3000
+CMD ["node", "build"]
