--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@storybook/sveltekit": "^7.6.4",
     "@storybook/test": "^7.6.4",
     "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-node": "^1.3.1",
     "@sveltejs/kit": "^1.27.4",
     "jsdom": "^23.0.1",
     "prettier": "^3.0.0",
@@ -41,7 +42,6 @@
   },
   "type": "module",
   "dependencies": {
-    "@sveltejs/adapter-static": "^2.0.3",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/svelte": "^4.0.5"
   }
